# rag-research-assistant

./: .gitignore  README.md  README_ZOTERO_SECTION.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: config.yaml  config_with_web.yaml
data/sample/: meeting_sample.md  references.bib  zotero_export.json
rag_assistant/: __init__.py  cli.py  cli_paper.py  cli_web.py  config.py  security.py
rag_assistant/audit/: logger.py
rag_assistant/llm/: llama_cpp.py
rag_assistant/loader/: __init__.py  base.py  docx.py  markdown.py  pdf.py  web.py  zotero.py
rag_assistant/paper/: __init__.py  engine.py  formatter_docx.py  formatter_latex.py  outline.py
rag_assistant/rag/: citation.py  engine.py  engine_with_web.py
rag_assistant/retriever/: chunker.py  embedder.py  vector_store.py
rag_assistant/retrievers/: __init__.py  web_retriever.py
rag_assistant/zotero/: __init__.py  formatter.py  index.py  parser.py
tests/: conftest.py  test_embedder_fallback.py  test_end2end.py  test_paper_drafting.py  test_web_retrieval_security.py  test_zotero.py
